# pybeamer

./: .gitignore  README.md  pyproject.toml  test.tex
pybeamer/: __init__.py  defaults.py  document.py  exceptions.py  nodes.py  utils.py
pybeamer/templates/: block.jinja2  enumerate.jinja2  frame.jinja2  itemize.jinja2  makefile.jinja2  prologue.jinja2  titlepage.jinja2  toc.jinja2
test_tex/: makefile  test.aux  test.tex
tests/: test_case.py  test_nodes.py  test_utils.py
