[tool.poetry]
name = "pybeamer"
version = "0.1.0"
description = ""
authors = ["charlesl46 <charles.lucas4665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
pybeamer = "pybeamer.document:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
