[tool.poetry]
name = "pybeamer"
version = "0.1.0"
description = "Create LaTeX beamers with Python."
authors = ["charlesl46 <charles.lucas4665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"