[project]
name = "pybeamer"
version = "0.1.0"
description = ""
authors = [
    {name = "charlesl46",email = "charles.lucas4665@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
